--- a/src/sass/newPage.scss
+++ b/src/sass/newPage.scss
@@ -14,6 +14,8 @@ header.newPage{
           &>li{ position: relative;
             &:after,
             &:before{content:''; display: block; width: 10px; height: 2px; background-color: #828282; left:0; top:5px;}
+            &:after{}
+            &:before{}
             p{color:#828282; font-weight:bold; font-size:18px;}
             &>ul{
               &>li{
