--- a/src/sass/newPage.scss
+++ b/src/sass/newPage.scss
@@ -7,26 +7,84 @@ header.newPage{
 }
 .newPage{
   .topimg{ background-image: url(../images/newPBG.jpg); min-height:440px; width: 100%; background-position: center; background-size:cover; background-repeat: no-repeat;}
-  .content-wrap{
-    .left-column{
-      .menu-newP{
-        &>ul{
-          &>li{ position: relative;
-            &:after,
-            &:before{content:''; display: block; width: 10px; height: 2px; background-color: #828282; left:0; top:5px;}
-            &:after{}
-            &:before{}
-            p{color:#828282; font-weight:bold; font-size:18px;}
-            &>ul{
-              &>li{
-                a{color:#828282; font-size:14px;}
-              }
-            }
-          }
-        }
+  .content-wrap{ padding: 37px 11px 148px;
+      .breadcrumbs{padding-bottom: 38px;
+      span{font-size:14px;}
+      a{ color: #474752; font-size:14px;
+        &:hover{color: #eb9623;}
       }
+      &>span:last-child{span{color: #eb9623;}}
 
     }
-    .right-column{ border-top:1px solid #e8e8e8;}
+    .left-column{float:left; width: 310px; margin-right: 35px;
+        .menu-newP{
+            &>ul{ padding-left: 21px;
+                &>li{ position: relative; padding-left: 18px; padding-bottom: 11px;
+                    &:after,
+                    &:before{content:''; display: block; width: 10px; height: 2px; background-color: #828282; left:0; top:9px; position: absolute;transition: transform 500ms;}
+                    &:after{transform: rotate(90deg);}
+                    &.active{
+                        &:after{transform: rotate(360deg);}
+                        &:before{transform: rotate(360deg)}
+                    }
+                    p{color:#828282; font-weight:bold; font-size:18px; cursor:pointer;}
+                    &>ul{ display: none;padding: 15px 0 11px 16px;
+                        &>li{ position: relative; padding-bottom: 10px; padding-left: 17px;
+                            &:before{content:''; display: block; width: 6px; height: 6px; background-color: #f3d131; position: absolute; left: 0; top: 4px;border-radius: 50%;}
+                            a{color:#828282; font-size:14px;
+                            &:hover,
+                            &.active{ color: #eb9623;}
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+    .right-column{ border-top:1px solid #e8e8e8; width: calc(100% - 345px); float: left; padding-top: 34px;
+      .item{border-bottom:1px solid #f3d131;    padding-bottom: 7px;   margin-bottom: 39px; 
+
+          .img{float:left; max-width: 255px;    margin:0 30px 30px 0;}
+            .txt{
+                  .bttn{display: block;width: 100%; text-align: right;padding-top: 15px;}
+                  a{ color: #f4623c; text-decoration: none; position: relative; display: inline-block;
+                    &:before{content: ''; display: block; position: absolute; height: 1px; width: 0; background-color: #f4623c; transition:all 300ms; bottom: 0;}
+                    &:hover{ &:before{width: 100%;}}
+                  }
+                  p{ font-size:16px; color:#858585; line-height: 19px;
+                    &:first-child{ font-weight:bold; font-size:24px; color: #323232;padding-bottom: 20px;}
+                  }
+                }
+        }
+        .lets-find{padding-top: 67px;
+            .buttonNew{width: 100%; text-align: center;
+                a{ text-transform: uppercase; text-decoration: none; font-weight:bold; font-size: 33px; color: #000; text-align: center; border: 3px solid #ffc502; padding: 12px 48px; transition: all 300ms;
+                    &:hover{ background-color: #ffc502;}
+                }
+            }
+            .list-title{padding-top: 81px;
+                p{ font-weight:bold; font-size: 20px; color: #858585;}
+                ul{    padding: 23px 0 23px 12px;}
+                li{ position: relative; padding-bottom: 6px; padding-left: 17px;
+                    &:before{content:''; display: block; width: 6px; height: 6px; background-color: #f3d131; position: absolute; left: 0; top: 4px;border-radius: 50%;}
+                    a{color:#54769b; font-size:18px; text-decoration:underline;
+                        &:hover,
+                        &.active{ color: #eb9623;}
+                    }
+                }
+            }
+        }
+        .item-big{
+            .img{}
+            .txt{    padding-bottom: 49px;
+                p{ font-size:16px; color:#858585; line-height: 19px;
+                    &:first-child{ font-weight:bold; font-size:28px; color: #323232;padding-bottom: 14px;border-bottom:1px solid #e8e8e8;padding-top: 27px;                        margin-bottom: 26px;}
+                }
+            }
+            .socials-butt-wrap{width: 100%; text-align: right;}
+            .socials-butt{border-bottom:1px solid #e8e8e8;border-top:1px solid #e8e8e8; display: inline-block;padding: 15px;}
+        }
+    }
   }
 }
