--- a/src/sass/newPage.scss
+++ b/src/sass/newPage.scss
@@ -15,11 +15,11 @@ header.newPage{
       }
       &>span:last-child{span{color: #eb9623;}}
 
-    }
+        }
     .left-column{float:left; width: 310px; margin-right: 35px;
         .menu-newP{
             &>ul{ padding-left: 21px;
-                &>li{ position: relative; padding-left: 18px; padding-bottom: 11px;
+                &>li{ position: relative; padding-left: 18px; padding-bottom: 11px;cursor:pointer;
                     &:after,
                     &:before{content:''; display: block; width: 10px; height: 2px; background-color: #828282; left:0; top:9px; position: absolute;transition: transform 500ms;}
                     &:after{transform: rotate(90deg);}
@@ -27,9 +27,9 @@ header.newPage{
                         &:after{transform: rotate(360deg);}
                         &:before{transform: rotate(360deg)}
                     }
-                    p{color:#828282; font-weight:bold; font-size:18px; cursor:pointer;}
+                    p{color:#828282; font-weight:bold; font-size:18px; }
                     &>ul{ display: none;padding: 15px 0 11px 16px;
-                        &>li{ position: relative; padding-bottom: 10px; padding-left: 17px;
+                        &>li{ position: relative; padding-bottom: 10px; padding-left: 17px;cursor:pointer;
                             &:before{content:''; display: block; width: 6px; height: 6px; background-color: #f3d131; position: absolute; left: 0; top: 4px;border-radius: 50%;}
                             a{color:#828282; font-size:14px;
                             &:hover,
@@ -45,7 +45,7 @@ header.newPage{
     .right-column{ border-top:1px solid #e8e8e8; width: calc(100% - 345px); float: left; padding-top: 34px;
       .item{border-bottom:1px solid #f3d131;    padding-bottom: 7px;   margin-bottom: 39px;
 
-          .img{float:left; max-width: 255px;    margin:0 30px 30px 0;}
+          .img{float:left; max-width: 255px;    margin:0 30px 5px 0;}
             .txt{
                   .bttn{display: block;width: 100%; text-align: right;padding-top: 15px;}
                   a{ color: #f4623c; text-decoration: none; position: relative; display: inline-block;
@@ -59,7 +59,7 @@ header.newPage{
         }
         .lets-find{padding-top: 67px;
             .buttonNew{width: 100%; text-align: center;
-                a{ text-transform: uppercase; text-decoration: none; font-weight:bold; font-size: 33px; color: #000; text-align: center; border: 3px solid #ffc502; padding: 12px 48px; transition: all 300ms;
+                a{ text-transform: uppercase; text-decoration: none; font-weight:bold; font-size: 33px; color: #000; text-align: center; border: 3px solid #ffc502; padding: 12px 48px; transition: all 300ms; display: inline-block;
                     &:hover{ background-color: #ffc502;}
                 }
             }
@@ -76,7 +76,9 @@ header.newPage{
             }
         }
         .item-big{
-            .img{}
+            .img{
+                img{max-width: 100%;}
+            }
             .txt{    padding-bottom: 49px;
                 p{ font-size:16px; color:#858585; line-height: 19px;
                     &:first-child{ font-weight:bold; font-size:28px; color: #323232;padding-bottom: 14px;border-bottom:1px solid #e8e8e8;padding-top: 27px;                        margin-bottom: 26px;}
@@ -87,4 +89,66 @@ header.newPage{
         }
     }
   }
+}
+
+@media (max-width: 1210px) {
+    .newPage{
+        .content-wrap{
+            .left-column{width: 250px;}
+            .right-column{ width: calc(100% - 285px);
+                .lets-find {
+                    .buttonNew {
+                        a { display: inline-block; padding: 12px; }
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width: 992px) {
+    .newPage{
+        .content-wrap{
+            .right-column{
+                .lets-find {
+                    .buttonNew {
+                        a { font-size:20px; }
+                    }
+                }
+                .item{
+                    .img {  float:none;max-width: auto; margin: 0 auto 16px;width: 100%;display: block;text-align: center;
+                        img{max-width: 100%;}
+                    }
+                }
+
+            }
+        }
+    }
+}
+@media (max-width: 768px) {
+    header.newPage{
+        .additional{ display: none;}
+    }
+    .newPage {
+        .topimg{min-height: 200px;}
+        .content-wrap {padding: 37px 20px 148px;
+            .left-column { width: 100%; float: none; }
+            .right-column { width: 100%; float: none;
+                .item-big .txt p:first-child,
+                .item .txt p:first-child{ text-align: center;}
+            }
+        }
+    }
+}
+@media (max-width: 480px) {
+    .newPage{
+        .content-wrap{
+            .right-column{
+                .lets-find {
+                    .buttonNew {
+                        a { font-size:13px; }
+                    }
+                }
+            }
+        }
+    }
 }
